# ramses_esp_esp32s3mini

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/cc1101/: CMakeLists.txt  Kconfig.projbuild  cc1101.c  cc1101.h  cc1101_const.h  cc1101_param.c  cc1101_param.h
components/command/: CMakeLists.txt  cmd.c  cmd.h
components/esp_debug/: CMakeLists.txt  esp_debug.c  esp_debug.h
components/frame/: CMakeLists.txt  Kconfig.projbuild  frame.c  uart.c  uart.h
components/gateway/: CMakeLists.txt  Kconfig.projbuild  device.c  device.h  gateway.c  gateway.h
components/led/: CMakeLists.txt  led.c  led.h
components/message/: CMakeLists.txt  Kconfig.projbuild  message.c  message.h  msg.c  msg.h  msg_0016.c  msg_10A0.c  msg_1260.c  msg_1FC9.c
components/network/: CMakeLists.txt  Kconfig.projbuild  network.c  network.h  network_cmd.c  network_cmd.h  ota.c  ota_cmd.c  ramses_ota.c  ramses_sntp.c  ramses_sntp.h  ramses_wifi.c  ramses_wifi.h  wifi.c  wifi.h  wifi_cmd.c  wifi_cmd.h
components/params/: CMakeLists.txt  Kconfig.projbuild  params.c  params.h
components/ramses-buttons/: CMakeLists.txt  ramses_buttons.c
components/ramses-debug/: CMakeLists.txt  Kconfig.projbuild  debug_cmd.c  debug_cmd.h  ramses_debug.c
components/ramses-led/: CMakeLists.txt  (+2 more)
components/ramses-network/: CMakeLists.txt  Kconfig.projbuild  network_cmd.c  ota_cmd.c  ramses_network.c  ramses_network.h  ramses_ota.c  ramses_ota.h  ramses_wifi.c  wifi_cmd.c
components/ramses-network/include/: ramses_network.h
main/: CMakeLists.txt  Kconfig.projbuild  host.c  host.h  idf_component.yml  main.c  platform.c  platform.h  radio.c  radio.h
(+21 files in other folders)
